adding thanks pg

--- a/client/js/templates/hotels/show.html
+++ b/client/js/templates/hotels/show.html
@@ -210,7 +210,10 @@
             </tr>
           </table>
             <div id="book" class="form-group col-md-2 text-center">
-                   <input type="submit" value="book" class="book">
+                   <!-- <input type="submit" value="book" class="book"> -->
+                   <a ng-href="/hotels/thanks" class="book">
+                book
+              </a>
               </div>
         </div>
       </div><!-- container-fluid -->  
