--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,3 +1,13 @@
+
+.hotel-checkbox{
+ /*width: 239.82px;
+ height: 20px;*/
+ padding-bottom: 20px;
+}
+.space{
+  padding-left: 4px;
+  font-weight: normal;
+}
 .errors{
   color:red;
   font-size: 15px;
