--- a/client/js/templates/auth/login.html
+++ b/client/js/templates/auth/login.html
@@ -3,6 +3,7 @@
     <div class="center-form panel">
       <div class="panel-body">
         <h2 class="text-center">Log in</h2>
+        <h1 style="color: red">{{error}}</h1>
         <form method="post" ng-submit="login()" name="loginForm">
           <div class="form-group has-feedback">
             <input class="form-control input-lg" type="text" name="email" ng-model="user.email" placeholder="Email" required autofocus>
