--- a/client/js/templates/hotels/index.html
+++ b/client/js/templates/hotels/index.html
@@ -52,9 +52,9 @@
  <div class="container-fluid">
     <div class="row">
       <div class="form-group col-md-1" >
-          <h6>Price Range</h6>
+          <h5>Price Range</h5>
       </div>
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-6 s">
          <div ui-slider="{range: true}" min="30" max="1000" step="20" ng-model="price" class="ui-slider-horizontal ui-widget ui-widget-content ui-corner-all" > 
          </div>
       </div> 
@@ -75,226 +75,50 @@
  <div ng-show="allFilters">
        <div class="row">
           <div class="form-group col-md-1" >
-             <h6>Amenities</h6>
+             <h6 class="amen">Amenities</h6>
           </div>
-          <div class="form-group col-md-2">
+          <!-- <div class="form-group col-md-2 box">
             <label class="checkbox-inline">
-                <input type="checkbox" id="wirelessInternet" value="wirelessInternet" ng-model="hotel.amenities.wirelessInternet"> Wireless Internet
+                <input type="checkbox" id="wirelessInternet" value="wirelessInternet" ng-model="hotel.amenities.wirelessInternet" ng-click="test(hotel.amenities.wirelessInternet)"> Wireless Internet
             </label>
-          </div>
-          <div class="form-group col-md-2">
+          </div> -->
+          <!-- <div class="form-group col-md-2 box">
             <label class="checkbox-inline">
                 <input type="checkbox" id="pool" value="pool" ng-model="hotel.amenities.pool">  Pool
             </label>
-          </div>
-          <div class="form-group col-md-2">
+          </div> -->
+        <!--   <div class="form-group col-md-2 box">
             <label class="checkbox-inline">
                 <input type="checkbox" id="kitchen" value="kitchen" ng-model="hotel.amenities.kitchen">  Kitchen
             </label>
-          </div> 
-          <div ng-click="additionalAmenites=!additionalAmenites">
+          </div> --> 
+
+          <div class="form-group col-md-2 box" ng-repeat="(key, text) in firstamenities">
+            <label class="checkbox-inline">
+                <input type="checkbox" checklist-value="key" ng-click="test(key)"> {{key}}
+            </label>
+          </div>
+
+          <div ng-click="additionalAmenites=!additionalAmenites" class="box">
            <span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> 
           </div>
         </div>
-        <div class="row">
+        <div class="row" ng-show="additionalAmenites">
           <div class=" form-group col-xs-1">
           </div>
            <div class="col-xs-6">
               <div class="row">
-                <div ng-show="additionalAmenites">
                   <label class="col-md-4 hotel-checkbox" ng-repeat="(key, text) in amenities">
-                    <input  type="checkbox" checklist-model="amenity.amenities" checklist-value="key"> <span class="space">{{key}}</span>
+                    <input  type="checkbox" checklist-value="key" ng-click="test(key)"> <span class="space">{{key}}</span>
                   </label>
-                </div>
               </div>
             </div>
         </div>
             
-
-                <!--  <div class="row">
-                    <div class="form-group col-md-1" >
-                      <h6></h6>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="hourCheckIn" value="hourCheckIn" ng-model="hotel.amenities.hourCheckIn">    24-Hour Check-in
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="airConditioning" value="airConditioning" ng-model="hotel.amenities.airConditioning">    Air Conditioning
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="breakfast" value="breakfast" ng-model="hotel.amenities.breakfast" >  Breakfast
-                      </label>
-                    </div>
-                </div> -->
-            <!--     <div class="row">
-                    <div class="form-group col-md-1" >
-                      <h6></h6>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="buzzer" value="buzzer" ng-model="hotel.amenities.buzzer" >    Buzzer/Wireless Intercom
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="cableTv" value="cableTv" ng-model="hotel.amenities.cableTv">    Cable TV
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="jacuzzi" value="jacuzzi" ng-model="hotel.amenities.jacuzzi">   Jacuzzi 
-                      </label>
-                    </div>
-                </div> -->
-               <!--  <div class="row">
-                    <div class="form-group col-md-1" >
-                      <h6></h6>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="doorman" value="doorman" ng-model="hotel.amenities.doorman">      Doorman
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="dryer" value="dryer" ng-model="hotel.amenities.dryer">    Dryer
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="elevator" value="elevator" ng-model="hotel.amenities.elevator">    Elevator in Building
-                      </label>
-                    </div>
-                </div> -->
-           <!--      <div class="row">
-                    <div class="form-group col-md-1" >
-                      <h6></h6>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="essentials" value="essentials" ng-model="hotel.amenities.essentials">        Essentials
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="family" value="family" ng-model="hotel.amenities.family">    Family/Kid Friendly
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="tv" value="tv" ng-model="hotel.amenities.tv">    tv
-                      </label>
-                    </div>
-                </div>
-                 <div class="row">
-                    <div class="form-group col-md-1" >
-                      <h6></h6>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="events" value="events" ng-model="hotel.amenities.events">     Suitable for Events         
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="parking" value="parking" ng-model="hotel.amenities.parking">      Free Parking on Premises
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="gym" value="gym" ng-model="hotel.amenities.gym">    Gym
-                      </label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="form-group col-md-1" >
-                      <h6></h6>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="hangers" value="hangers" ng-model="hotel.amenities.hangers">          Hangers
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="hotTub" value="hotTub" ng-model="hotel.amenities.hotTub">      Hot Tub
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="hairDryer" value="hairDryer" ng-model="hotel.amenities.hairDryer">    Hair Dryer
-                      </label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="form-group col-md-1" >
-                      <h6></h6>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="heating" value="heating" ng-model="hotel.amenities.heating">            Heating
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="fireplace" value="fireplace" ng-model="hotel.amenities.fireplace">      Indoor Fireplace
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="internet" value="internet" ng-model="hotel.amenities.internet">    Internet
-                      </label>
-                    </div>
-                </div>
-                 <div class="row">
-                    <div class="form-group col-md-1" >
-                      <h6></h6>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="iron" value="iron" ng-model="hotel.amenities.iron">              Iron
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="pets" value="pets" ng-model="hotel.amenities.pets">        Pets Allowed
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="wheelchair" value="wheelchair" ng-model="hotel.amenities.wheelchair">    Wheelchair Accessible
-                      </label>
-                    </div>
-                </div>
-                 <div class="row">
-                    <div class="form-group col-md-1" >
-                      <h6></h6>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="shampoo" value="shampoo" ng-model="hotel.amenities.shampoo">              Shampoo
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="washer" value="washer" ng-model="hotel.amenities.washer">        Washer      
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="smoking" value="smoking" ng-model="hotel.amenities.smoking">    Smoking Allowed
-                      </label>
-                    </div>
-                </div>
-              </div>
+<!-- HOTEL SAFETY -->
               <div class="row">
                 <div class="form-group col-md-1" >
-                  <h6>Hotel Safety</h6>
+                  <h6 class="amen">Hotel Safety</h6>
                 </div>
                 <div class="form-group col-md-2">
                   <label class="checkbox-inline">
@@ -332,111 +156,46 @@
                     </div>
                 </div>
               </div>
+              <!-- PROPERTY TYPE -->
                <div class="row">
                <div class="form-group col-md-1" >
-                  <h6>Property Type</h6>
+                  <h6 class="amen">Property Type</h6>
                 </div>
-                <div class="form-group col-md-2">
+                <div class="form-group col-md-2 box">
                   <label class="checkbox-inline">
                       <input type="checkbox" id="hotel" value="hotel" ng-model="hotel.propertyType.hotel">  Hotel
                   </label>
                 </div>
-                <div class="form-group col-md-2">
+                <div class="form-group col-md-2 box">
                   <label class="checkbox-inline">
                       <input type="checkbox" id="house" value="house" ng-model="hotel.propertyType.house">  House   
                   </label>
                 </div>
-                <div class="form-group col-md-2">
+                <div class="form-group col-md-2 box">
                   <label class="checkbox-inline">
                       <input type="checkbox" id="breakfast" value="breakfast" ng-model="hotel.propertyType.breakfast">  Bed & Breakfast
                   </label>
                 </div> 
-                <div ng-click="propertyType=!propertyType">
+                <div ng-click="propertyType=!propertyType" class="box">
                  <span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> 
                 </div>
               </div>
+
+
+          <div class="row">
+            <div class=" form-group col-xs-1">
+          </div>
+           <div class="col-xs-6">
+              <div class="row">
                 <div ng-show="propertyType">
-                 <div class="row">
-                    <div class="form-group col-md-1" >
-                      <h6></h6>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="boat" value="boat" ng-model="hotel.propertyType.boat">    Boat 
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="bungalow" value="bungalow" ng-model="hotel.propertyType.bungalow">    Bungalow
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="cabin" value="cabin" ng-model="hotel.propertyType.cabin">    Cabin
-                      </label>
-                    </div>
+                  <label class="col-md-4 hotel-checkbox3" ng-repeat="(key, text) in propertyTypes">
+                    <input  type="checkbox" checklist-model="property.propertyTypes" checklist-value="key"> <span class="space">{{key}}</span>
+                  </label>
                 </div>
-                 <div class="row">
-                    <div class="form-group col-md-1" >
-                      <h6></h6>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="camper" value="camper" ng-model="hotel.propertyType.camper">    Camper/RV 
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="cave" value="cave" ng-model="hotel.propertyType.cave">    Cave
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="chalet" value="chalet" ng-model="hotel.propertyType.chalet">      Chalet
-                      </label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="form-group col-md-1" >
-                      <h6></h6>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="condominium" value="condominium" ng-model="hotel.propertyType.condominium">    Condominium 
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="inlineCheckbox2" value="villa" ng-model="hotel.propertyType.villa" >    Villa
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="lighthouse" value="lighthouse" ng-model="hotel.propertyType.lighthouse">      Lighthouse
-                      </label>
-                    </div>
-                </div> -->
-               <!--  <div class="row">
-                    <div class="form-group col-md-1" >
-                      <h6></h6>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="loft" value="loft" ng-model="hotel.propertyType.loft">      Loft
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="tent" value="tent" ng-model="hotel.propertyType.tent">      Tent
-                      </label>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label class="checkbox-inline">
-                          <input type="checkbox" id="treehouse" value="treehouse" ng-model="hotel.propertyType.treehouse">      Treehouse
-                      </label>
-                    </div>
-                </div> -->
-              
+              </div>
+            </div>
+        </div>
+
   </div>
 </div><!-- closing container fluid -->
 <div class="container-fluid">
