--- a/client/js/templates/hotels/show.html
+++ b/client/js/templates/hotels/show.html
@@ -32,7 +32,7 @@
       <div class="col-md-6">
           <div class="row">
             <div class="col-md-6">
-              <h2>{{hotel.hotelname}} {{hotel.starRating}}</h2>
+              <h2>{{hotel.hotelname}} <!-- {{hotel.starRating}} --></h2>
             </div>
             <div class="pull-right">
               <!-- <a ng-href="/hotels/new" class="btn btn-default" ng-show="user._id===hotel.user">
