--- a/client/js/templates/hotels/home.html
+++ b/client/js/templates/hotels/home.html
@@ -51,17 +51,17 @@
           </form>
       </div> 
     </div>
-<div>
+</div>
     <!-- WHY bestHotels -->
-    <!-- <div class="container-fluid"> -->
+<div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
           <h2 class="text-center">Why bestHotels?</h2>
         </div>
       </div>
-    <!-- </div> -->  
+</div>  
     <br>
-    <!-- <div class="container-fluid"> -->
+<div class="container-fluid">
       <div class="row">
         <!-- <div class="col-md-12 col-xs-offset-9> -->
             <div class="col-md-2">
@@ -81,8 +81,9 @@
             </div>
             <div class="col-md-2">
             </div>
-        <!-- </div>  -->   
-      </div>
+        </div>    
+</div>
+<div class="container-fluid">
       <div class="row">
          <div class="col-md-2">
             </div>
@@ -116,15 +117,50 @@
             <div class="col-md-1">
             </div>
             <div class="col-md-2 ">
-              <p class="text-center">Nulla meatball shoulder ea beef sed chuck, ullamco.</p>
+              <p class="text-center">See hotels results, filter by diffrent categories.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2"> 
             </div>
        </div>
        <div class="col-md-12">
          <h2 class="text-center">Explore the world</h2>
        </div>
- </div>
+</div>
+<div class="container-fluid">
+       <div class="row">
+
+          <div class="col-md-6 col-md-offset-1">
+            <img class="explore" ng-src="/images/paris.jpg">
+          </div>
+          <div>
+            <h1 class="titlep">PARIS</h1>
+          </div>
+          <div class="col-md-4 ">
+            <img class="tahoe" ng-src="/images/tahoe.jpg">
+          </div>
+           <div>
+            <h1 class="titlet">TAHOE</h1>
+          </div>
+       </div>
+       <div class="row">
+          <div class="col-md-1">
+          </div>
+          <div class="col-md-4">
+            <img class="iceland" ng-src="/images/iceland.jpg">
+          </div>
+           <div>
+            <h1 class="titlei">ICELAND</h1>
+          </div>
+          <div class="col-md-6">
+            <img class="sun" ng-src="/images/sun.jpg">
+          </div>
+          <div>
+            <h1 class="titlev">VIETNAM</h1>
+          </div>
+          <div class="col-md-1">
+          </div>
+       </div>
+</div>
 
 
  
