--- a/best_hotels/client/js/templates/hotels/thanks.html
+++ b/best_hotels/client/js/templates/hotels/thanks.html
@@ -1,1 +1,32 @@
-<h1>Thanks for booking with us</h1>
+<nav>
+    <div class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+              <ul>
+                <li role="presentation" class="logoindex"><a ng-href="/home.html" id="navblack" >bestHotels</a>
+                </li>
+              </ul>
+            </div>
+            <div class="form-group col-md-4 searchindex" ng-class="search">
+              <form ng-submit="searchHotel(location)">  
+                <input autofocus type="text" name="search" class="form-control" ng-model="location.search" placeholder="Where do you want to go?">
+              </form>
+            </div>
+               <ul class="nav navbar-nav pull-right">
+                    <!-- <li><a href="#">My Favorites</a></li> -->
+                    <!-- <li><a href="#">User Name</a></li> -->
+                    <li role="presentation" class="pull-right" ng-hide="{{userNav}}"><a ng-href="/signup">Sign Up</a>
+                    </li>
+                    <li role="presentation" class="pull-right" ng-hide="{{userNav}}"><a ng-href="/login">Log In</a>
+                    </li>
+                    <li role="presentation" class="pull-right" ng-show="{{userNav}}"><a ng-href="/logout">Logout</a>
+                    </li>
+                    <li role="presentation"><a href="#"><span ng-show="{{user.host}}">Host</span> {{user.displayName}}</a></li>
+                    <img class = "profileimage"ng-src="{{user.picture}}" alt="" width="40px" height="40px">
+               </ul>
+        </div><!-- /.container-fluid -->
+    </div>
+  </nav>
+
+
+<h1>Thank you!</h1>
