--- a/client/js/templates/hotels/show.html
+++ b/client/js/templates/hotels/show.html
@@ -211,7 +211,7 @@
           </table>
             <div id="book" class="form-group col-md-2 text-center">
                    <!-- <input type="submit" value="book" class="book"> -->
-                   <a ng-href="/hotels/thankyou.html" class="book">
+                   <a ng-href="/hotels/thankyou" class="book">
                 book
               </a>
               </div>
