--- a/client/js/templates/hotels/thankyou.html
+++ b/client/js/templates/hotels/thankyou.html
@@ -1,1 +1,31 @@
-<h1>Thanks you!</h1>
+<nav>
+    <div class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+              <ul>
+                <li role="presentation" class="logoindex"><a ng-href="/home.html" id="navblack" >bestHotels</a>
+                </li>
+              </ul>
+            </div>
+               <ul class="nav navbar-nav pull-right">
+                    <!-- <li><a href="#">My Favorites</a></li> -->
+                    <!-- <li><a href="#">User Name</a></li> -->
+                    <li role="presentation" class="pull-right" ng-hide="{{userNav}}"><a ng-href="/signup">Sign Up</a>
+                    </li>
+                    <li role="presentation" class="pull-right" ng-hide="{{userNav}}"><a ng-href="/login">Log In</a>
+                    </li>
+                    <li role="presentation" class="pull-right" ng-show="{{userNav}}"><a ng-href="/logout">Logout</a>
+                    </li>
+                    <li role="presentation"><a href="#"><span ng-show="{{user.host}}">Host</span> {{user.displayName}}</a></li>
+                    <img class = "profileimage"ng-src="{{user.picture}}" alt="" width="40px" height="40px">
+               </ul>
+        </div><!-- /.container-fluid -->
+    </div>
+  </nav>
+  
+<h1>Thank you!</h1>
+<h3 class="text-center">for choosing bestHotels</h3>
+<img class="email" ng-src="/images/emailicon.jpg" alt="" width="150px">
+<p class="text-center">
+  We have just have sent you to your E-mail a letter with complate information about your booking!
+</p>
