--- a/client/css/style.css
+++ b/client/css/style.css
@@ -418,20 +418,20 @@ h1 {
  /* padding-bottom: 15px;*/
 }
 .dollar{
-  padding-top: 7px;
-  padding-left: 7px;
+  padding-top: 0.5vw;
+  padding-left: 0.4vw;
 }
 .price_on_img{
   position: absolute;
-  top: 145px;
-  left: 0px;
-  font-size: 20px;
+  top: 10vw;
+  left: 0vw;
+  font-size: 1.6vw;
   color:white;
   font-weight: bold;
   background: gray;
   width: 4.5vw;
   height: 3vw;
-  max-width: 100%;
+ /* max-width: 100%;*/
 }
 
 
