--- a/client/js/templates/hotels/index.html
+++ b/client/js/templates/hotels/index.html
@@ -101,25 +101,25 @@
 <!-- HOTEL SAFETY -->
               <div class="row">
                 <div class="form-group col-md-1" >
-                  <h6 class="safty">Hotel Safety</h6>
+                  <h6 class="amen">Hotel Safety</h6>
                 </div>
-                <div class="form-group col-md-2 " ng-repeat="(key, text) in hotelsafety">
+                <div class="form-group col-md-2 " ng-repeat="(key, text) in firsthotelsafety">
                   <label class="checkbox-inline">
                       <input type="checkbox" checklist-value="key" ng-click="test2(key)"> {{key}}
                   </label>
                 </div>
 
-                <div ng-click="hotelSafety=!hotelSafety">
+                <div ng-click="hotSafety=!hotSafety">
                  <span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> 
                 </div>
               </div>
 
-              <div class="row" ng-show="hotelSafety">
+              <div class="row" ng-show="hotSafety">
                   <div class="form-group col-xs-1">
                   </div>
                    <div class="col-xs-6">
                       <div class="row">
-                          <label class="col-md-4 hotel-checkbox" ng-repeat="(key, text) in morehotelsafety">
+                          <label class="col-md-4 hotel-checkbox" ng-repeat="(key, text) in hotelSafety">
                             <input  type="checkbox" checklist-value="key" ng-click="test2(key)"> <span class="space">{{key}}</span>
                           </label>
                       </div>
@@ -137,17 +137,17 @@
                         </label>
                       </div>
                    
-                <div ng-click="propertyType=!propertyType" class="box">
+                <div ng-click="propType=!propType" class="box">
                  <span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span> 
                 </div>
               </div>
 
-               <div class="row" ng-show="propertyType">
+               <div class="row" ng-show="propType">
                   <div class="form-group col-xs-1">
                   </div>
                    <div class="col-xs-6">
                       <div class="row">
-                          <label class="col-md-4 hotel-checkbox" ng-repeat="(key, text) in propertyTypes">
+                          <label class="col-md-4 hotel-checkbox" ng-repeat="(key, text) in propertyType">
                             <input  type="checkbox" checklist-value="key" ng-click="test3(key)"> <span class="space">{{key}}</span>
                           </label>
                       </div>
@@ -161,7 +161,7 @@
     <div class="col-xs-6">
      <div class="container-fluid">
         <div class="row">
-          <sliderhotels hotel="hotel" ng-repeat="hotel in hotels  | filter:checkbox"></sliderhotels>
+          <sliderhotels hotel="hotel" ng-repeat="hotel in hotels  | filter:checkbox | filter:checkbox1 | filter:checkbox2"></sliderhotels>
         </div>
       </div>
     </div>
