--- a/client/js/templates/auth/signup.html
+++ b/client/js/templates/auth/signup.html
@@ -31,4 +31,4 @@
     </div>
   </div>
 </div>
-<button ng-click="authenticate('facebook')">Sign up with Facebook</button>
+<button class="btn btn-facebook fbsignup" ng-click="authenticate('facebook')">Sign up with Facebook</button>
