--- a/client/js/templates/auth/login.html
+++ b/client/js/templates/auth/login.html
@@ -19,11 +19,11 @@
             <small>Don't have an account yet? <a href="/signup">Sign up</a></small>
           </p>
           <div class="signup-or-separator">
-            <h6 class="text">or</h6>
+            <p class="or">OR</p>
             <hr>
           </div>
         </form>
-        <button class="btn btn-block btn-facebook" ng-click="authenticate('facebook')">
+        <button class="btn btn-facebook fb" ng-click="authenticate('facebook')">
           <i class="ion-social-facebook"></i> Sign in with Facebook
         </button>
       </div>
